done with html and css

--- a/index.html
+++ b/index.html
@@ -192,45 +192,82 @@
           <h2 class="recipe-info__title">Pizza with some extra chees</h2>
         </div>
       </div>
-      <div class="bgc-color bgc-color--white">
-        <div class="wrapper">
-          <div class="recipe-info__details">
-            <div class="recipe-info__details-left">
-              <div class="recipe-info__time-box">
-                <i class="fa-regular fa-clock"></i>
-                <p class="recipe-info__time">75 minutes</p>
-              </div>
-              <div class="recipe-info__servings-box">
-                <i class="fa-solid fa-user-group"></i>
-                <p class="recipe-info__servings">4 servings</p>
-              </div>
+      <div class="wrapper">
+        <div class="recipe-info__details">
+          <div class="recipe-info__details-left">
+            <div class="recipe-info__time-box">
+              <i class="fa-regular fa-clock"></i>
+              <p class="recipe-info__time">75 minutes</p>
             </div>
-            <div class="recipe-info__details-right">
-              <button class="recipe-info__btn btn btn--heart"><i class="fa-solid fa-heart"></i></button>
+            <div class="recipe-info__servings-box">
+              <i class="fa-solid fa-user-group"></i>
+              <p class="recipe-info__servings">4 servings</p>
             </div>
+          </div>
+          <div class="recipe-info__details-right">
+            <button class="recipe-info__btn btn btn--heart"><i class="fa-solid fa-heart"></i></button>
           </div>
         </div>
       </div>
-      <div class="recipe-info__ingredients">
+
+      
+      <div class="bgc-color  bgc-color--faded-white">
         <div class="wrapper">
-          <h3 class="title title--blue">Recipe ingredients</h3>
+          <h3 class="title title--blue recipe-info__body-title">Recipe ingredients</h3>
+          <div class="recipe-info__ingredients-box">
+            <ul class="recipe-info__ingredient-list">
+              <li class="recipe-info__ingredient">
+                <i class="fa-solid fa-check"></i>
+                <div class="recipe-info__quantity">1000</div>
+                <div class="recipe-info__description">
+                  <span class="recipe-info__unit">g</span>
+                  pasta
+                </div>
+              </li>
+              <li class="recipe-info__ingredient">
+                <i class="fa-solid fa-check"></i>
+                <div class="recipe-info__quantity">0.5</div>
+                <div class="recipe-info__description">
+                  <span class="recipe-info__unit">cup</span>
+                  ricotta cheese
+                </div>
+              </li>
+              <li class="recipe-info__ingredient">
+                <i class="fa-solid fa-check"></i>
+                <div class="recipe-info__quantity">0.5</div>
+                <div class="recipe-info__description">
+                  <span class="recipe-info__unit">cup</span>
+                  ricotta cheese
+                </div>
+              </li>
+              <li class="recipe-info__ingredient">
+                <i class="fa-solid fa-check"></i>
+                <div class="recipe-info__quantity">0.5</div>
+                <div class="recipe-info__description">
+                  <span class="recipe-info__unit">cup</span>
+                  ricotta cheese
+                </div>
+              </li>
+              
 
-        </div>
-      </div>
-      <div class="bgc-color bgc-color--white">
-        <div class="recipe-info__bottom">
-          <div class="wrapper">
-            <h4 class="title title--blue">How to cook it</h4>
-            <p class="recipe-info__text">This recipe was carefully designed and tested by All Recipes. Please check out
-              directions at their website.</p>
-
-            <a href="#">Directions</a>
-
+            </ul>
           </div>
         </div>
 
-
       </div>
+      <div class="recipe-info__bottom">
+        <div class="wrapper">
+          <h4 class="title title--blue recipe-info__body-title">How to cook it</h4>
+          <p class="recipe-info__text">This recipe was carefully designed and tested by <span>All Recipes</span>. Please check out
+            directions at their website.</p>
+
+          <a class="recipe-info__go-to" href="#">Directions</a>
+
+        </div>
+      </div>
+
+
+
 
     </div>
 
