--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <main class="main">
     <div class="wrapper">
       <div class="results">
-        <h2 class="results__title">Your results will be here:</h2>
+        <h2 class="results__error"></h2>
         <div class="results__box">
          
          
